// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`row block filters Bootstrap 5 wp_bootstrap_blocks_row_default_attributes should override default attributes with Bootstrap 5 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"noGutters\\":false} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":8} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block filters Bootstrap 5 wpBootstrapBlocks.row.horizontalGuttersOptions should add horizontal gutters option 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"noGutters\\":false,\\"horizontalGutters\\":\\"gx-4\\"} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":8} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;

exports[`row block filters Bootstrap 5 wpBootstrapBlocks.row.verticalGuttersOptions should add vertical gutters option 1`] = `
"<!-- wp:wp-bootstrap-blocks/row {\\"noGutters\\":false,\\"verticalGutters\\":\\"gy-4\\"} -->
<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":4} /-->

<!-- wp:wp-bootstrap-blocks/column {\\"sizeMd\\":8} /-->
<!-- /wp:wp-bootstrap-blocks/row -->"
`;
